Revision history for Test-Warnings

{{$NEXT}}

0.029     2020-03-14 05:27:59Z
          - new :report_warnings feature, for printing all of the (unexpected)
            warning content when had_no_warnings() is called (Tina Mueller, PR#10)

0.028     2019-12-21 20:16:01Z
          - allow for calling warnings->import being called after importing
            the "warnings" sub

0.027     2019-09-28 03:54:47Z
          - new :fail_on_warning feature, for more easily seeing where the
            surprising warning appeared during testing

0.026     2016-01-27 03:13:25Z
          - fixed use of modules loaded by t/zzz-check-breaks.t
          - fix stderr suppression on perl 5.6

0.025     2016-01-24 02:59:28Z
          - prereqs lowered from required to suggested:
            - CPAN::Meta::Check
            - CPAN::Meta::Requirements
          - tests are now quieter to avoid causing confusion, by suppressing
            the printing of stderr in tests

0.024     2015-12-24 18:44:29Z
          - remove diagnostics accidentally left in new test

0.023     2015-12-22 06:44:24Z
          - properly handle propagating warnings to previously declared
            handlers that are not coderefs (i.e. a sub name, or the magic
            DEFAULT and IGNORE)

0.022     2015-12-19 00:32:42Z
          - propagate all warnings to any previously-declared __WARN__
            handlers (unlike with __DIE__, merely calling warn() is not
            sufficient)

0.021     2015-03-21 18:48:27Z
          - add a x_breaks entry for conflicting versions of File::pushd which
            inadvertently call our exported warnings() rather than invoking
            warnings.pm, and documented this undesired interaction

0.020     2015-01-03 20:32:21Z
          - re-release to fix problematic $VERSION declaration (RT#101239)

0.019     2014-12-18 20:07:02Z
          - fix test to allow for special characters (e.g. MSWin32 file
            separators) in filenames (A. Sinan Unur, PR#7)
