@@ -4,8 +4,9 @@ use warnings;
 use Test::More;
 use Test::Warnings ':all';
 
-eval 'use Foo::Bar::Baz';
-plan skip_all => 'Need Foo::Bar::Baz to continue!' if $@;
+my $module = 'Does::Not::Exist::'.substr(rand, 2);
+eval "use $module";
+plan skip_all => 'Need '.$module.' to continue!' if $@;
 
 fail('we should not ever get here');
 
