@@ -1,6 +1,8 @@
 Revision history for Test-Warnings
 
 {{$NEXT}}
+          - fix tests that can fail when there is already an installed module
+            named Foo::Bar::Baz (RT#132140)
 
 0.029     2020-03-14 05:27:59Z
           - new :report_warnings feature, for printing all of the (unexpected)
